[workspace]
members = ["cigeratte", "miror", "phthisis", "quiclike", "smog", "tobacco", "colloid"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Andy Hsu", "3261429104atqq.com"]
license = "Apache-2.0"
repository = "https://github.com/andihsu/quiclike"

[workspace.dependencies]
bytes = "1.10.1"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["net"] }
tracing = "0.1.41"

# Local Dependencies.
smog = { path = "smog", version = "0.0.0" }
tobacco = { path = "tobacco", version = "0.0.0" }
miror = { path = "miror", version = "0.0.0" }
cigeratte = { path = "cigeratte", version = "0.0.0"}
phthisis = { path = "phthisis", version = "0.0.0" }
colloid = { path = "colloid", version = "0.0.1" }

