[package]
name = "colloid"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Crypto layer abstraction for smog."

[dependencies]
blake3 = { version = "1.8.2", features = ["rayon", "mmap"] }
chacha20poly1305 = "0.10.1"
aead = { version = "0.5.2", features = ["bytes"] }
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets", "getrandom"] }
