[package]
name = "smog"
version = "0.0.0"
edition = "2024"
authors = ["Andy Hsu", "3261429104atqq.com"]
license.workspace = true
readme = "readme.md"
categories = ["noise", "crypto", "quiclike", "tobacco"]
description = "The noise protocol framework implementation for quiclike protocol, part of tobacco."

[dependencies]
anyhow = "1.0.98"
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
