[package]
name = "smog"
version = "0.0.0"
edition = "2024"
authors = ["Andy Hsu", "3261429104atqq.com"]
license.workspace = true
readme = "readme.md"
categories = ["noise", "crypto", "quiclike", "tobacco"]
description = "The noise protocol framework implementation for quiclike protocol, part of tobacco."

[dependencies]
anyhow = "1.0.98"
blake2b_simd = "1.0.3"
bytes.workspace = true
chacha20poly1305 = "0.10.1"
getrandom = "0.3.3"
rand_core = "0.9.3"
tracing.workspace = true
x25519-dalek = "2.0.1"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
