[package]
name = "smog"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Noise implementation focus on one-rtt and zero-rtt handshake."

[dependencies]
bytes.workspace = true
colloid.workspace = true
chacha12-blake3 = "0.9.10"
